# face-off

./: .gitignore  .readme  README.md  leaderboard.json  pyproject.toml
face_off/: __init__.py  image-test.py
face_off/templates/: index.html  leaderboard.html  singleboard.html
