[tool.poetry]
name = "face-off"
version = "0.1.0"
description = ""
authors = ["Nick Michau <70205169+NOM1989@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
deepface = "^0.0.83"
opencv-python = "^4.9.0.80"
flask = "^3.0.1"
flask-socketio = "^5.3.6"
matplotlib = "^3.8.2"
numpy = "^1.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
